# visible-task

./: .env.dev  .env.prod  .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
crawler_service/: Dockerfile  pyproject.toml  selenium_test.py
crawler_service/crawler/: models.py  settings.py  urls.py  views.py
crawler_service/crawler/jobs/: job_manager.py  links_parser.py
crawler_service/crawler/migrations/: 0001_initial.py
nginx/: Dockerfile
nginx/crawler_ui/: .gitignore  package-lock.json  package.json
nginx/crawler_ui/public/: index.html
nginx/crawler_ui/src/: App.css  App.test.tsx  App.tsx  index.tsx
nginx/crawler_ui/src/blocks/Main/: Main.tsx
nginx/crawler_ui/src/styles/: fonts.scss  index.scss
nginx/templates/: nginx.conf.template
