[tool.poetry]
name = "crawler_service"
version = "0.1.0"
description = "Order Service to crawl all the URLs in the given webpage"
authors = ["Ivan Ergunov <hozblok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
selenium = "^4.3.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
pytest = "^7.1.1"
python-dotenv = "^0.20.0"
isort = "^5.10.1"
pytest-env = "^0.6.2"
pytest-asyncio = "^0.18.3"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
